--- a/server/py4web/apps/vidjil/templates/partial/run/form.html
+++ b/server/py4web/apps/vidjil/templates/partial/run/form.html
@@ -1,27 +1,41 @@
 <div class="form_line">
 <span class="left form_label">Run [[=i+1]]</span>
 <i class="icon-cancel" onclick="var elem = this.parentNode;elem.parentNode.removeChild(elem);"></i>
-<input type="hidden" id="run_id_[[=i]]" name="run[([[=i]])][id]" value="[[if set is not None:]][[=set['id']]][[pass]]">
-<input type="hidden" sample_set_id="run_sample_set_id_[[=i]]" name="run[([[=i]])][sample_set_id]" value="[[if set is not None:]][[=set['sample_set_id']]][[pass]]">
+
+<input  type="hidden" id="run_id_[[=i]]" 
+        name="[[="run["+str(i)+"][id]"]]"
+        value="[[if set is not None:]][[=set['id']]][[pass]]">
+
+<input  type="hidden" sample_set_id="run_sample_set_id_[[=i]]" 
+        name="[[="run["+str(i)+"][sample_set_id]"]]" 
+        value="[[if set is not None:]][[=set['sample_set_id']]][[pass]]">
+
 [[ if set is not None and 'error' in set and len(set['error']) > 0: ]]
     <div class="error">error: [[=", ".join(set['error'])]]</div>
 [[ pass ]]
 [[ if set is not None and 'message' in set and len(set['message']) > 0: ]]
     <div>[[=", ".join(set['message'])]]</div>
 [[ pass ]]
+
 <div class="field_div">
-    <input class="stringid form-control" id="run_id_label_[[=i]]" name="run[([[=i]])][id_label]" type="text"
-        value="[[if set is not None and set['id_label'] is not None:]][[=set['id_label']]][[pass]]" placeholder="run ID"><span></span>
+    <input  class="stringid form-control" id="run_id_label_[[=i]]" 
+            name="[[="run["+str(i)+"][id_label]"]]" type="text"
+            value="[[if set is not None and set['id_label'] is not None:]][[=set['id_label']]][[pass]]" placeholder="run ID"><span></span>
 </div>
+
 <div class="field_div">
-    <input class="string form-control" id="run_name_[[=i]]" name="run[([[=i]])][name]" type="text"
-        value="[[if set is not None:]][[=set['name']]][[pass]]" required placeholder="run name">
+    <input  class="string form-control" id="run_name_[[=i]]" 
+            name="[[="run["+str(i)+"][name]"]]" type="text"
+            value="[[if set is not None:]][[=set['name']]][[pass]]" required placeholder="run name">
 </div>
+
 <div class="field_div">
-    <input id="run_date_[[=i]]" name="run[([[=i]])][run_date]" type="text" class="date form-control"
-        value="[[if set is not None and set['run_date'] is not None:]][[=set['run_date']]][[pass]]"
-        placeholder="yyyy-mm-dd" title="run date" pattern="(?:19|20)[0-9]{2}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1[0-9]|2[0-9])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:30))|(?:(?:0[13578]|1[02])-31))">
+    <input  id="run_date_[[=i]]" 
+            name="[[="run["+str(i)+"][run_date]"]]" type="text" class="date form-control"
+            value="[[if set is not None and set['run_date'] is not None:]][[=set['run_date']]][[pass]]"
+            placeholder="yyyy-mm-dd" title="run date" pattern="(?:19|20)[0-9]{2}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1[0-9]|2[0-9])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:30))|(?:(?:0[13578]|1[02])-31))">
 </div>
+
 <div class="field_div">
     <input
         onfocus=" new VidjilAutoComplete().setupTags(this);"
