--- a/server/py4web/apps/vidjil/templates/partial/generic/form.html
+++ b/server/py4web/apps/vidjil/templates/partial/generic/form.html
@@ -1,17 +1,26 @@
 <div class="form_line">
 <span class="left form_label">Set [[=i+1]]</span>
 <i class="icon-cancel" onclick="var elem = this.parentNode;elem.parentNode.removeChild(elem);"></i>
-<input type="hidden" id="generic_id_[[=i]]" name="generic[([[=i]])][id]" value="[[if set is not None:]][[=set['id']]][[pass]]">
-<input type="hidden" sample_set_id="generic_sample_set_id_[[=i]]" name="generic[([[=i]])][sample_set_id]" value="[[if set is not None:]][[=set['sample_set_id']]][[pass]]">
+
+<input  type="hidden" id="generic_id_[[=i]]" 
+        name="[[="generic["+str(i)+"][id]"]]"
+        value="[[if set is not None:]][[=set['id']]][[pass]]">
+
+<input  type="hidden" sample_set_id="generic_sample_set_id_[[=i]]" 
+        name="[[="generic["+str(i)+"][sample_set_id]"]]"
+        value="[[if set is not None:]][[=set['sample_set_id']]][[pass]]">
+
 [[ if set is not None and 'error' in set and len(set['error']) > 0: ]]
     <div class="error">error: [[=", ".join(set['error'])]]</div>
 [[pass]]
 [[ if set is not None and 'message' in set and len(set['message']) > 0: ]]
     <div>[[=", ".join(set['message'])]]</div>
 [[ pass ]]
+
 <div class="field_div">
-    <input id="sample_set_name_[[=i]]" name="generic[([[=i]])][name]" type="text" class="string form-control"
-        value="[[if set is not None:]][[=(set['name'])]][[pass]]" required placeholder="Name">
+    <input  id="sample_set_name_[[=i]]" 
+            name="[[="generic["+str(i)+"][name]"]]" type="text" class="string form-control"
+            value="[[if set is not None:]][[=(set['name'])]][[pass]]" required placeholder="Name">
 </div>
 <div class="field_div">
     <input
@@ -21,7 +30,7 @@
         data-keys="[[=group_ids]]"
         class="text form-control"
         id="sample_set_info_[[=i]]"
-        name="generic[([[=i]])][info]"
+        name="[[="generic["+str(i)+"][info]"]]"
         rows="1"
         placeholder="set information (#tags can be used)"
         autocomplete="off"
