--- a/server/py4web/apps/vidjil/templates/sample_set/custom.html
+++ b/server/py4web/apps/vidjil/templates/sample_set/custom.html
@@ -1,15 +1,16 @@
-{{extend 'db_layout.html'}}
-{{import vidjil_utils}}
-
+[[extend 'db_layout.html']]
+[[from apps.vidjil.modules import vidjil_utils]]
+[[from apps.vidjil.modules.sampleSet import get_sample_name]]
+[[from apps.vidjil.modules.permission_enum import PermissionEnum]]
 
 
 <div>
 
-	{{ if request.vars['id']: }}
-		<h3>Preview or compare samples from {{=helper.get_type_display()}} {{=get_sample_name(request.vars["id"])}}</h3>
-	{{ else: }}
+	[[ if request.query['id']: ]]
+		<h3>Preview or compare samples from [[=helper.get_type_display()]] [[=get_sample_name(request.query["id"])]]</h3>
+	[[ else: ]]
 	        <h3>Preview or compare samples</h3>
-    {{pass}}
+    [[pass]]
 
     <p>Select up to 10 samples to be compared.</p>
 
@@ -17,37 +18,37 @@
 
         <div class="db_block_left">
             search
-            <input id="db_filter_input" type="text" value="{{=request.vars["filter"]}}" 
-                   onchange="db.call('sample_set/custom', {'config_id' : '{{=request.vars["config_id"]}}', 
+            <input id="db_filter_input" type="text" value="[[=request.query["filter"] ]]" 
+                   onchange="db.call('sample_set/custom', {'config_id' : '[[=config_id]]', 
                                                       'filter' : this.value, 
                                                       'custom_list' : db.getListInput('custom_result[]')} )"
                    onfocus="new VidjilAutoComplete().setupTags(this);"
-                   data-needs-atwho="true" data-keys="{{=group_ids}}">
+                   data-needs-atwho="true" data-keys="[[=group_ids]]">
         </div>
 
 
         <div class="db_block_right">
-        {{if auth.has_permission(PermissionEnum.run.value, 'sample_set', 0) :}}
+        [[if auth.has_permission(PermissionEnum.run.value, 'sample_set', 0) :]]
             config
             <span>
                 <select id="choose_config" name="config" onchange="db.call('sample_set/custom', {'config_id' : this.value, 
-                                                                   'filter' : '{{=request.vars["filter"]}}',
+                                                                   'filter' : '[[=request.query["filter"] ]]',
                                                                   'custom_list' : db.getListInput('custom_result[]'),
-                                                                  'id' : '{{='' if request.vars["id"] is None else request.vars["id"]}}' })">
-                    <option value="-1" {{if not config :}}selected{{pass}}> --- </option>
-                    {{ for class_name in classification.keys(): }}
-                      {{ class_elt = classification[class_name] }}
-                      <optgroup label="{{ =class_elt['name'] }}"  title="{{ =class_elt['info'] }}">
-                        {{ for row in class_elt['configs']: }}
-                            <option value="{{=row.id }}" {{if row.id==config_id:}}selected{{pass}} title="{{=row.info}}" >
-                              {{=row.name}}
+                                                                  'id' : '[[='' if request.query["id"] is None else request.query["id"] ]]' })">
+                    <option value="-1" [[if not config :]]selected[[pass]]> --- </option>
+                    [[ for class_name in classification.keys(): ]]
+                      [[ class_elt = classification[class_name] ]]
+                      <optgroup label="[[ =class_elt['name'] ]]"  title="[[ =class_elt['info'] ]]">
+                        [[ for row in class_elt['configs']: ]]
+                            <option value="[[=row.id ]]" [[if row.id==config_id:]]selected[[pass]] title="[[=row.info]]" >
+                              [[=row.name]]
                             </option>
-                        {{pass}}
+                        [[pass]]
                       </optgroup>
-                    {{pass}}
+                    [[pass]]
                 </select>
             </span>
-        {{pass}}
+        [[pass]]
         </div>
     </div>
 
@@ -57,7 +58,7 @@
     <table class="db_table table_compare" id="table">
         <thead>
             <tr><td class="column_20"> </td>
-                <td class="column_200"> {{=helper.get_type_display() if helper is not None else "name"}} </td>
+                <td class="column_200"> [[=helper.get_type_display() if helper is not None else "name"]] </td>
                 <td class="column_200"> file name </td>
                 <td class="column_100"> sampling date </td>
                 <td> info </td>
@@ -72,27 +73,27 @@
         </thead>
         <tbody>
 
-            {{for row in query :}}
+            [[for row in query :]]
 
                  <tr>
-                    <td> <input type="checkbox" name="custom_result[]" value="{{=row.results_file.id}}" {{if row.checked :}} checked {{pass}}> </td>
-                    <td> {{=row.names}} </td>
-                    <td {{if row.sequence_file.data_file == None :}} {{=XML("class='inactive' title='file is missing' ")}}  {{pass}} id="sequence_file_{{=row.sequence_file.id}}">
-                         {{=row.sequence_file.filename}}
+                    <td> <input type="checkbox" name="custom_result[]" value="[[=row.results_file.id]]" [[if row.checked :]] checked [[pass]]> </td>
+                    <td> [[=row.names]] </td>
+                    <td [[if row.sequence_file.data_file == None :]] [[=XML("class='inactive' title='file is missing' ")]]  [[pass]] id="sequence_file_[[=row.sequence_file.id]]">
+                         [[=row.sequence_file.filename]]
                     </td>
-                    <td> {{=row.sequence_file.sampling_date}} </td>
-                    <td> {{=tag_decorator.sanitize(tag_decorator.decorate(row.sequence_file.info, 'tag', 'sequence_file', '/sample_set/custom'))}} </td>
-                    <td> {{=row.sequence_file.pcr}} </td>
-                    <td {{if row.sequence_file.data_file == None :}} {{=XML("class='inactive' title='file is missing' ")}} {{pass}} >
-                        {{=vidjil_utils.format_size(row.sequence_file.size_file)}} </td>
-		    <td> {{=row.config.name}}
+                    <td> [[=row.sequence_file.sampling_date]] </td>
+                    <td> [[=tag_decorator.sanitize(tag_decorator.decorate(row.sequence_file.info, 'tag', 'sequence_file', '/sample_set/custom'))]] </td>
+                    <td> [[=row.sequence_file.pcr]] </td>
+                    <td [[if row.sequence_file.data_file == None :]] [[=XML("class='inactive' title='file is missing' ")]] [[pass]] >
+                        [[=vidjil_utils.format_size(row.sequence_file.size_file)]] </td>
+		    <td> [[=row.config.name]]
                     <td class="column_sep"></td>
 
-                   {{if row.results_file.run_date :}}
-                       <td class="button" onclick="db.call('results_file/info', { 'results_file_id' : '{{=row.results_file.id}}' } )"> {{=row.results_file.run_date }}</td>
-                   {{else:}}<td></td>{{pass}}
+                   [[if row.results_file.run_date :]]
+                       <td class="button" onclick="db.call('results_file/info', { 'results_file_id' : '[[=row.results_file.id]]' } )"> [[=row.results_file.run_date ]]</td>
+                   [[else:]]<td></td>[[pass]]
                 </tr>
-            {{pass}}
+            [[pass]]
 
         </tbody>
     </table>
@@ -109,11 +110,11 @@
     <div class="db_block_right">
         <span class="devel-mode button2" onclick="db.call('sample_set/multi_sample_stats', {'custom_result': db.getListInput('custom_result[]') })" >preview / quality control</span>
         <span class="button2" 
-          {{if request.vars["id"] != None: }}
-            onclick="myUrl.loadCustomUrl(db, {'sample_set_id':{{=request.vars["id"]}} })" 
-          {{else:}}
+          [[if request.query["id"] != None: ]]
+            onclick="myUrl.loadCustomUrl(db, {'sample_set_id':[[=request.query["id"] ]] })" 
+          [[else:]]
             onclick="myUrl.loadCustomUrl(db, undefined)" 
-          {{pass}}
+          [[pass]]
           > see results </span>
     </div>
 
