--- a/server/py4web/apps/vidjil/templates/file/confirm.html
+++ b/server/py4web/apps/vidjil/templates/file/confirm.html
@@ -1,16 +1,16 @@
-{{extend 'db_layout.html'}}
+[[extend 'db_layout.html']]
 
-{{('message' in globals())}}
-{{if 'message' in globals():}}
+[[('message' in globals())]]
+[[if 'message' in globals():]]
 
 <div>
-    <h3>{{=message}}</h3>
+    <h3>[[=message]]</h3>
     
-    {{count_results = db(db.results_file.sequence_file_id==request.vars["id"]).count()}}
+    [[count_results = db(db.results_file.sequence_file_id==request.query["id"]).count()]]
 
     Are you sure you want to delete this sequence file?</br>
 
-    {{if not delete_results and not delete_only_sequence:}}
+    [[if not delete_results and not delete_only_sequence:]]
       You have the choice:
     <dl>
       <dt>delete sequence alone</dt>
@@ -20,32 +20,32 @@
       </dd>
       <dt>delete sequence and results</dt>
       <dd>
-	You will remove everything related with this sequence file: the sequence file itself as well as the {{=count_results}} files that have been generated.
+	You will remove everything related with this sequence file: the sequence file itself as well as the [[=count_results]] files that have been generated.
       </dd>
     </dl>
-    {{else:}}
-      {{if delete_results:}}
-      You are about to delete the sequence file and {{=count_results}} result files.
-      {{else:}}
+    [[else:]]
+      [[if delete_results:]]
+      You are about to delete the sequence file and [[=count_results]] result files.
+      [[else:]]
       You are about to delete the sequence file alone.
-      {{pass}}
+      [[pass]]
       <p>This action cannot be undone.</p>
-    {{pass}}
+    [[pass]]
     <div class="center"> 
-      {{if delete_results or delete_only_sequence:}}
-        <button onclick="db.call('file/delete', {'id' :'{{=request.vars["id"]}}', 'redirect_sample_set_id' :'{{=request.vars["redirect_sample_set_id"]}}', 'delete_results': '{{=delete_results}}'} )">delete</button>
-      {{else:}}
-	<button onclick="db.call('file/delete', {'id': '{{=request.vars["id"]}}', 'redirect_sample_set_id' :'{{=request.vars["redirect_sample_set_id"]}}',
+      [[if delete_results or delete_only_sequence:]]
+        <button onclick="db.call('file/delete', {'id' :'[[=request.query["id"] ]]', 'redirect_sample_set_id' :'[[=request.query["redirect_sample_set_id"] ]]', 'delete_results': '[[=delete_results]]'} )">delete</button>
+      [[else:]]
+	<button onclick="db.call('file/delete', {'id': '[[=request.query["id"] ]]', 'redirect_sample_set_id' :'[[=request.query["redirect_sample_set_id"] ]]',
 'delete_results': 'False', 'delete_only_sequence': 'True'})">delete sequence alone</button>
-	<button onclick="db.call('file/delete', {'id': '{{=request.vars["id"]}}', 'redirect_sample_set_id' :'{{=request.vars["redirect_sample_set_id"]}}',
+	<button onclick="db.call('file/delete', {'id': '[[=request.query["id"] ]]', 'redirect_sample_set_id' :'[[=request.query["redirect_sample_set_id"] ]]',
 'delete_results': 'True', 'delete_only_sequence': 'False'})">delete sequence and results</button>
-      {{pass}}
-        <button onclick="db.call('sample_set/index', {'id' :'{{=request.vars["redirect_sample_set_id"]}}'} )">cancel</button>
+      [[pass]]
+        <button onclick="db.call('sample_set/index', {'id' :'[[=request.query["redirect_sample_set_id"] ]]'} )">cancel</button>
     </div>
 </div>
     
-{{elif 'content' in globals():}}
-{{=content}}
-{{else:}}
-{{=BEAUTIFY(response._vars)}}
-{{pass}}
+[[elif 'content' in globals():]]
+[[=content]]
+[[else:]]
+[[=BEAUTIFY(response._vars)]]
+[[pass]]
