--- a/server/py4web/apps/vidjil/templates/partial/file/form.html
+++ b/server/py4web/apps/vidjil/templates/partial/file/form.html
@@ -8,11 +8,20 @@
         <div>[[=", ".join(file['message'])]]</div>
     [[ pass ]]
     <div class="hidden">
-        <input type="hidden" id="file_filename_[[=i]]" class="filename" name="file[[[=i]]][filename]" type="text" value="">
-        <input type="hidden" id="file_filename2_[[=i]]" class="filename" name="file[[[=i]]][filename2]" type="text" value="">
-        <input type="hidden" id="file_id_[[=i]]" name="file[[[=i]]][id]"
-            value="[[if 'id' in file:]][[=(file['id'])]][[pass]]" >
-        <input type="hidden" id="sample_set_id" name="sample_set_id" value="[[if "sample_set_id" in request.vars:]][[=request.vars["sample_set_id"]]][[pass]]" >
+        <input  type="hidden" id="file_filename_[[=i]]" class="filename" 
+                name="[[="file["+str(i)+"][filename]"]]" type="text" value="">
+
+        <input  type="hidden" id="file_filename2_[[=i]]" class="filename" 
+                name="[[="file["+str(i)+"][filename2]"]]" type="text" value="">
+
+        <input  type="hidden" id="file_id_[[=i]]" 
+                name="[[="file["+str(i)+"][id]"]]"
+                value="[[if 'id' in file:]][[=(file['id'])]][[pass]]" >
+
+        <input  type="hidden" id="sample_set_id" 
+                name="sample_set_id" 
+                value="[[if "sample_set_id" in request.query:]][[=request.query["sample_set_id"]]][[pass]]" >
+
         <input type="hidden" id="sample_type" name="sample_type" value="[[=sample_type]]" />
         [[if isEditing:]]
           <input type="hidden" id="is_editing" name="is_editing" value="1" />
@@ -69,7 +78,7 @@
 
     </div>
     <div class="field_div">
-        <input class="date form-control" id="file_sampling_date_[[=i]]" name="file[[[=i]]][sampling_date]" type="text" title="sampling date"
+        <input class="date form-control" id="file_sampling_date_[[=i]]" name="file[ [[=i]] ][sampling_date]" type="text" title="sampling date"
             value="[[if 'sampling_date' in file and file['sampling_date'] is not None:]][[=file['sampling_date']]][[pass]]"
             placeholder="yyyy-mm-dd" pattern="(?:19|20)[0-9]{2}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1[0-9]|2[0-9])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:30))|(?:(?:0[13578]|1[02])-31))">
     </div>
@@ -80,7 +89,7 @@
             data-needs-atwho="true"
             data-keys="[[=group_ids]]"
             class="text form-control"
-            name="file[[[=i]]][info]"
+            name="[[="file["+str(i)+"][info]"]]"
             rows="1"
             placeholder="sample information (#tags can be used)"
             autocomplete="off"
@@ -91,9 +100,9 @@
             <input
                 hidden
                 id="file_set_list_[[=i]]"
-                name="file[[[=i]]][set_ids]"
+                name="[[="file["+str(i)+"][set_ids]"]]"
                 type="text"
-                value="[[=",".join([set['id'] for set in file['sets']])]]">
+                value="[[=",".join([set['id'] for set in file['sets'] ])]]">
             <div id="file_set_div_[[=i]]" class="token_container">
                 [[ for set in file['sets']: ]]
                     <span class="set_token [[=set['type']]]_token" data-set-id="[[=set['id']]]">
