--- a/server/py4web/apps/vidjil/templates/group/confirm.html
+++ b/server/py4web/apps/vidjil/templates/group/confirm.html
@@ -1,21 +1,21 @@
-{{extend 'db_layout.html'}}
+[[extend 'db_layout.html']]
 
-{{('message' in globals())}}
-{{if 'message' in globals():}}
+[[('message' in globals())]]
+[[if 'message' in globals():]]
 
 
 <div>
-    <h3>{{=message}}</h3>
+    <h3>[[=message]]</h3>
     
     Are you sure you want to delete this group</br>
 
     <div class="center"> 
-        <button onclick="db.call('group/delete', {'id' :'{{=request.vars["id"]}}'} )">continue</button>
+        <button onclick="db.call('group/delete', {'id' :'[[=request.query["id"]]]'} )">continue</button>
     </div>
 </div>
     
-{{elif 'content' in globals():}}
-{{=content}}
-{{else:}}
-{{=BEAUTIFY(response._vars)}}
-{{pass}}
+[[elif 'content' in globals():]]
+[[=content]]
+[[else:]]
+[[=BEAUTIFY(response._vars)]]
+[[pass]]
