--- a/server/py4web/apps/vidjil/templates/group/edit.html
+++ b/server/py4web/apps/vidjil/templates/group/edit.html
@@ -1,11 +1,11 @@
-{{extend 'db_layout.html'}}
+[[extend 'db_layout.html']]
 
 <div>
     
-    <h3>{{=message}}</h3>
+    <h3>[[=message]]</h3>
 
     <form id="data_form" action="DB_ADDRESS/group/edit_form" enctype="multipart/form-data" method="post">
-        <input type="HIDDEN" id="group_id" name="id" value="{{=request.vars["id"]}}"> 
+        <input type="HIDDEN" id="group_id" name="id" value="[[=request.query["id"]]]"> 
         <table>
             <tbody>
                 <tr>
@@ -13,7 +13,7 @@
                         <label for="group_name" id="group_name__label"> Group Name: </label>
                     </td>
                     <td >
-                        <input class="string" id="group_name" name="group_name" type="text" value="{{=group.role}}">
+                        <input class="string" id="group_name" name="group_name" type="text" value="[[=group.role]]">
                     </td>
                     <td >
                     </td>
@@ -23,7 +23,7 @@
                         <label for="group_info" id="group_info__label">Info: </label>
                     </td>
                     <td>
-                        <textarea class="text" cols="40" id="group_info" name="info" rows="10">{{=group.description}}</textarea>
+                        <textarea class="text" cols="40" id="group_info" name="info" rows="10">[[=group.description]]</textarea>
                     </td>
                     <td>
                     </td>
