--- a/server/py4web/apps/vidjil/templates/group/index.html
+++ b/server/py4web/apps/vidjil/templates/group/index.html
@@ -1,9 +1,9 @@
-{{extend 'db_layout.html'}}
+[[extend 'db_layout.html']]
 
-{{('message' in globals())}}
-{{if 'message' in globals():}}
+[[('message' in globals())]]
+[[if 'message' in globals():]]
 
-    <h3 id="page_group">{{=message}}</h3>
+    <h3 id="page_group">[[=message]]</h3>
     
     <div id="db_table_container">
         <table class="db_table" id="table">
@@ -20,25 +20,23 @@
                     <td class="column_20"> </td>
                     <td class="column_20"> </td>
                     <td class="column_20"> </td>
-                    <td class="column_20"> </td>
                 </tr>
             </thead>
-           {{for row in query :}}
-               <tr id="row_group_{{=row.id}}" onclick="db.call('group/info', {'id' :'{{=row.id}}'} )">
-                   <td id="col_grpSelect_{{=row.id}}">
-                       <input type="checkbox" name="group_ids[]" value="{{=row.id}}"
+           [[for row in query :]]
+               <tr id="row_group_[[=row.id]]" onclick="db.call('group/info', {'id' :'[[=row.id]]'} )">
+                   <td id="col_grpSelect_[[=row.id]]">
+                       <input type="checkbox" name="group_ids[]" value="[[=row.id]]"
                          onclick="db.stopGroupPropagate(event)" />
                    </td>
-                    <td id="col_role_{{=row.id}}"> {{=row.role}} </td>
-                    <td id="col_count_{{=row.id}}"> {{=row.count}}  </td>
-                    <td id="col_access_{{=row.id}}"> {{=row.access}} // {{=row.description }} </td>
-                    <td id="col_parent_{{=row.id}}"> {{=row.parents}} </td>
-                    <td id="col_stats_{{=row.id}}" onclick="db.call('my_account', {'group_ids' :'{{=row.id}}'} )" > <i class="icon-chart-pie" title="view group statistics"></i> </td>
-                    <td id="col_permission_{{=row.id}}" onclick="db.call('group/permission', {'id' :'{{=row.id}}'} )" > <i class="icon-key" title="set permissions"></i> </td>
-                    <td id="col_edit_{{=row.id}}" onclick="db.call('group/edit', {'id' :'{{=row.id}}'} )" > <i class="icon-pencil-2" title="edit group"></i> </td>
-                    <td id="col_delete_{{=row.id}}" onclick="db.call('group/confirm', {'id' :'{{=row.id}}'} )" > <i class="icon-erase" title="delete group"></i> </td>
+                    <td id="col_role_[[=row.id]]"> [[=row.role]] </td>
+                    <td id="col_count_[[=row.id]]"> [[=row.count]]  </td>
+                    <td id="col_access_[[=row.id]]"> [[=row.access]] // [[=row.description ]] </td>
+                    <td id="col_parent_[[=row.id]]"> [[=row.parents]] </td>
+                    <td id="col_stats_[[=row.id]]" onclick="db.call('my_account', {'group_ids' :'[[=row.id]]'} )" > <i class="icon-chart-pie" title="view group statistics"></i> </td>
+                    <td id="col_edit_[[=row.id]]" onclick="db.call('group/edit', {'id' :'[[=row.id]]'} )" > <i class="icon-pencil-2" title="edit group"></i> </td>
+                    <td id="col_delete_[[=row.id]]" onclick="db.call('group/confirm', {'id' :'[[=row.id]]'} )" > <i class="icon-erase" title="delete group"></i> </td>
                 </tr>
-           {{pass}}
+           [[pass]]
         </table>
         <table class="db_table" id="db_fixed_header"></table>
     
@@ -49,8 +47,8 @@
 <span class="button2" onclick="db.callJobStats()">job stats</span>
 
 
-{{elif 'content' in globals():}}
-{{=content}}
-{{else:}}
-{{=BEAUTIFY(response._vars)}}
-{{pass}}
+[[elif 'content' in globals():]]
+[[=content]]
+[[else:]]
+[[=BEAUTIFY(response._vars)]]
+[[pass]]
