--- a/server/py4web/apps/vidjil/templates/pre_process/add.html
+++ b/server/py4web/apps/vidjil/templates/pre_process/add.html
@@ -1,4 +1,4 @@
-{{extend 'db_layout.html'}}
+[[extend 'db_layout.html']]
 
 <form id="data_form" action="DB_ADDRESS/pre_process/add_form" enctype="multipart/form-data" method="post">
     <table>
