--- a/server/py4web/apps/vidjil/templates/pre_process/confirm.html
+++ b/server/py4web/apps/vidjil/templates/pre_process/confirm.html
@@ -1,24 +1,24 @@
-{{extend 'db_layout.html'}}
+[[extend 'db_layout.html']]
 
-{{('message' in globals())}}
-{{if 'message' in globals():}}
+[[('message' in globals())]]
+[[if 'message' in globals():]]
 
 <div>
-    <h3>{{=message}}</h3>
+    <h3>[[=message]]</h3>
     
     Are you sure you want to delete this pre-process config?
-    <strong id="preprocess_name">{{=query[0]["name"]}}</strong> ({{=request.vars["id"]}}).
+    <strong id="preprocess_name">[[=query[0]["name"] ]]</strong> ([[=request.query["id"] ]]).
     </br></br>
 
-    <b>Info:</b> {{=query[0]["info"]}}</br>
-    <b>Command:</b> {{=query[0]["command"]}}</br>
+    <b>Info:</b> [[=query[0]["info"] ]]</br>
+    <b>Command:</b> [[=query[0]["command"] ]]</br>
     <div class="center"> 
-        <button id='delete_preprocess_confirm_btn' onclick="db.call('pre_process/delete', {'id' :'{{=request.vars["id"]}}'} )">delete pre-process config</button>
+        <button id='delete_preprocess_confirm_btn' onclick="db.call('pre_process/delete', {'id' :'[[=request.query["id"] ]]'} )">delete pre-process config</button>
     </div>
 </div>
     
-{{elif 'content' in globals():}}
-{{=content}}
-{{else:}}
-{{=BEAUTIFY(response._vars)}}
-{{pass}}
+[[elif 'content' in globals():]]
+[[=content]]
+[[else:]]
+[[=BEAUTIFY(response._vars)]]
+[[pass]]
