--- a/server/py4web/apps/vidjil/templates/pre_process/index.html
+++ b/server/py4web/apps/vidjil/templates/pre_process/index.html
@@ -1,9 +1,9 @@
-{{extend 'db_layout.html'}}
+[[extend 'db_layout.html']]
 
-{{('message' in globals())}}
-{{if 'message' in globals():}}
+[[('message' in globals())]]
+[[if 'message' in globals():]]
 
-<h3 id="page_preprocess">{{=message}}</h3>
+<h3 id="page_preprocess">[[=message]]</h3>
 
 <div id="db_table_container">
     <table class="db_table" id="table">
@@ -18,18 +18,18 @@
                 <td class="column_20"> </td>
             </tr>
         </thead>
-       {{ for row in query :}}
-            <tr  id="preprocess_line_{{=row.id }}" >
-                <td id="preprocess_id_{{=row.id }}"   > {{=row.id }} </td>
-                <td id="preprocess_name_{{=row.id }}" > {{=row.name }} </td>
-                <td id="preprocess_command_{{=row.id }}" > {{=row.command }} </td>
-                <td id="preprocess_info_{{=row.id }}" > {{=row.info }} </td>
+       [[ for row in query :]]
+            <tr  id="preprocess_line_[[=row.id ]]" >
+                <td id="preprocess_id_[[=row.id ]]"   > [[=row.id ]] </td>
+                <td id="preprocess_name_[[=row.id ]]" > [[=row.name ]] </td>
+                <td id="preprocess_command_[[=row.id ]]" > [[=row.command ]] </td>
+                <td id="preprocess_info_[[=row.id ]]" > [[=row.info ]] </td>
 
-{{if isAdmin:}} <td id="preprocess_permission_{{=row.id}}" onclick="db.call('pre_process/permission', {'id' :'{{=row.id}}'} )" > <i class="icon-key" title="set permissions"></i> </td> {{else:}} <td></td> {{pass}}
-                <td id="preprocess_edit_{{=row.id}}" onclick="db.call('pre_process/edit', {'id' :'{{=row.id}}'} )" > <i class="icon-pencil-2" title="edit pre-process"></i> </td>
-                <td id="preprocess_delete_{{=row.id}}" onclick="db.call('pre_process/confirm', {'id' :'{{=row.id}}'} )" > <i class="icon-erase" title="delete pre-process"></i> </td>
+[[if isAdmin:]] <td id="preprocess_permission_[[=row.id]]" onclick="db.call('pre_process/permission', {'id' :'[[=row.id]]'} )" > <i class="icon-key" title="set permissions"></i> </td> [[else:]] <td></td> [[pass]]
+                <td id="preprocess_edit_[[=row.id]]" onclick="db.call('pre_process/edit', {'id' :'[[=row.id]]'} )" > <i class="icon-pencil-2" title="edit pre-process"></i> </td>
+                <td id="preprocess_delete_[[=row.id]]" onclick="db.call('pre_process/confirm', {'id' :'[[=row.id]]'} )" > <i class="icon-erase" title="delete pre-process"></i> </td>
             </tr>
-        {{pass}}
+        [[pass]]
     </table>
     <table class="db_table" id="db_fixed_header"></table>
 </div>
@@ -37,8 +37,8 @@
 <span id="new_preprocess_btn" class="button2" onclick="db.call('pre_process/add')"> + new pre-process </span>
 
 
-{{elif 'content' in globals():}}
-{{=content}}
-{{else:}}
-{{=BEAUTIFY(response._vars)}}
-{{pass}}
+[[elif 'content' in globals():]]
+[[=content]]
+[[else:]]
+[[=BEAUTIFY(response._vars)]]
+[[pass]]
