--- a/server/py4web/apps/vidjil/templates/admin/monitor.html
+++ b/server/py4web/apps/vidjil/templates/admin/monitor.html
@@ -1,8 +1,8 @@
 workers 
-ALL={{=worker}}
+ALL=[[=worker]]
 tasks
-QUEUED={{=queued}}
-ASSIGNED={{=assigned}}
-RUNNING={{=running}}
-LAST_RESULTS={{=last_results}}...
+QUEUED=[[=queued]]
+ASSIGNED=[[=assigned]]
+RUNNING=[[=running]]
+LAST_RESULTS=[[=last_results]]...
 
