--- a/server/py4web/apps/vidjil/templates/config/confirm.html
+++ b/server/py4web/apps/vidjil/templates/config/confirm.html
@@ -1,21 +1,21 @@
-{{extend 'db_layout.html'}}
+[[extend 'db_layout.html']]
 
-{{('message' in globals())}}
-{{if 'message' in globals():}}
+[[('message' in globals())]]
+[[if 'message' in globals():]]
 
 <div>
-    <h3>{{=message}}</h3>
+    <h3>[[=message]]</h3>
     
     Are you sure you want to delete this config</br>
-    All data file using this config will also be deleted ({{=db(db.results_file.config_id==request.vars["id"]).count()}} data file(s) will be deleted).</br>
+    All data file using this config will also be deleted ([[=db(db.results_file.config_id==request.query["id"]).count()]] data file(s) will be deleted).</br>
 
     <div class="center"> 
-        <button onclick="db.call('config/delete', {'id' :'{{=request.vars["id"]}}'} )">continue</button>
+        <button onclick="db.call('config/delete', {'id' :'[[=request.query["id"] ]]'} )">continue</button>
     </div>
 </div>
     
-{{elif 'content' in globals():}}
-{{=content}}
-{{else:}}
-{{=BEAUTIFY(response._vars)}}
-{{pass}}
+[[elif 'content' in globals():]]
+[[=content]]
+[[else:]]
+[[=BEAUTIFY(response._vars)]]
+[[pass]]
